--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
     "webpack-plugin": "^1.0.5"
-  }
+  },
+  "dependencies": {}
 }
