--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development  --open "
+    "start": "webpack-dev-server --mode development  --open ",
+    "doc": "node_modules/.bin/jsdoc -d docs --configure jsdoc.json"
   },
   "author": "Gouri panda",
   "license": "ISC",
   "devDependencies": {
     "html-webpack-plugin": "^4.3.0",
+    "jsdoc": "^3.6.6",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
